[package]
name = "gd32vf103-pac"
version = "0.4.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
repository = "https://github.com/riscv-rust/gd32vf103-pac"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for GD32VF103 chips"
keywords = ["riscv", "gd32", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.5"
riscv = "0.10.1"
vcell = "0.1.2"

[features]
rt = []
